excalidraw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: excalidraw
  name: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: excalidraw
    spec:
      containers:
      - image: icecreammatt/excalidraw:v0.14.2
        name: excalidraw
        ports:
        - containerPort: 80
          name: xcldrw
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: excalidraw
  name: excalidraw
  annotations:
    external-dns.alpha.kubernetes.io/hostname: excalidraw.stage.mattcarrier.net
spec:
  selector:
    app: excalidraw
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8086
      targetPort: xcldrw
