ip-lookup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ip-lookup
  name: ip-lookup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ip-lookup
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ip-lookup
    spec:
      containers:
      - image: icecreammatt/lookup:latest
        name: lookup
        ports:
        - containerPort: 5000
          name: iplk-svc
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ip-lookup
  name: ip-lookup
spec:
  selector:
    app: ip-lookup
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8087
      targetPort: iplk-svc
