ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ip.localhost.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: ip-lookup
                port:
                  number: 5000
    - host: excalidraw.localhost.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: excalidraw
                port:
                  number: 80
    - host: mattcarrier.localhost.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: mattcarrier
                port:
                  number: 80
